--- a/oolab/build.gradle
+++ b/oolab/build.gradle
@@ -21,7 +21,7 @@ test {
 }
 
 application {
-    getMainClass().set('agh.ics.oop.World')
+    getMainClass().set('agh.ics.oop.WorldGUI')
 }
 
 java {
